2015-09-22  David Gilbert  <david.gilbert@object-refinery.com>

    * org/jfree/data/general/DatasetUtilities.java
    (iterateToFindDomainBounds): Check for x-value outside interval,
    (iterateToFindRangeBounds): Check for y-value outside interval.

2015-09-11  David Gilbert  <david.gilbert@object-refinery.com>

    * org/jfree/chart/fx/FXGraphics2D.java
    Updated to match latest code on GitHub,
    * org/jfree/chart/fx/FXGraphicsConfiguration.java
    New file,
    * org/jfree/chart/fx/FXGraphicsDevice.java
    New file.

2015-09-10  David Gilbert  <david.gilbert@object-refinery.com>

    * org/jfree/chart/labels/IntervalXYToolTipGenerator.java
    New file.

2015-09-10  David Gilbert  <david.gilbert@object-refinery.com>

    * org/jfree/chart/renderer/xy/YIntervalRenderer.java
    (drawItem): Check item visibility and enlarge entity bounds.

2015-09-09  David Gilbert  <david.gilbert@object-refinery.com>

    * org/jfree/chart/renderer/xy/XYShapeRenderer.java
    (drawItem): Update crosshair state.

2015-09-06  David Gilbert  <david.gilbert@object-refinery.com>

    * org/jfree/data/time/TimeSeries.java
    (findValueRange): Check for Double.NaN.

2014-08-31  David Gilbert  <david.gilbert@object-refinery.com>

    (Bug 986 fix from Vladimir Shirokov):
    * org/jfree/chart/plot/CombinedDomainXYPlot.java
    (datasetChanged): New method override.

2014-08-29  David Gilbert  <david.gilbert@object-refinery.com>

    (Patch from Simon Legner attached to bug 1129)
    * org/jfree/chart/ChartPanel.java
    (actionPerformed): Localise error messages,
    (saveAsSVG): Likewise,
    (saveAsPDF): Likewise.

2014-08-24  David Gilbert  <david.gilbert@object-refinery.com>

    * org/jfree/chart/renderer/BarRenderer3D.java
    (drawItem): Add element hinting,
    * org/jfree/chart/renderer/IntervalBarRenderer.java
    (drawInterval): Add element hinting,
    * org/jfree/chart/renderer/LayeredBarRenderer.java
    (drawHorizontalItem): Add element hinting,